# mochi-sdsdkv

./: .ycm_extra_conf.py  LICENSE  Makefile.am  README.md  autogen  cleanup.sh  configure.ac  setup.sh
config/: sdsdkv-pkg-libtool-version.m4  sdsdkv-pkg-mpi.m4
docs/: debug.txt  notes.txt
docs/misc-build/: sdsdkv-dev.sh
pkgconfig/: Makefile.am  sdsdkv.pc.in
src/: Makefile.am  sdsdkv-client.h  sdsdkv-config.h  sdsdkv-impl.h  sdsdkv-misci.h  sdsdkv-mpi.h  sdsdkv-personality-factory.h  sdsdkv-personality.h  sdsdkv-server.h  sdsdkv.cc  sdsdkv.h
test/: Makefile.am  trivial.cc
tests/: trivial.cc
