#
# Copyright (c) 2018      Los Alamos National Security, LLC
#                         All rights reserved.
#
# This file is part of the sdsdkv project. See the LICENSE file at the
# top-level directory of this distribution.
#

ACLOCAL_AMFLAGS = -Iconfig

EXTRA_DIST = \
README.md LICENSE autogen docs

SUBDIRS = \
src \
tests
