#
# Copyright (c) 2018      Los Alamos National Security, LLC
#                         All rights reserved.
#
# This file is part of the sdsdkv project. See the LICENSE file at the
# top-level directory of this distribution.
#

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = sdsdkv.pc

# These are generated.
MOSTLYCLEANFILES = $(pkgconfig_DATA)
