#
# Copyright (c) 2018      Los Alamos National Security, LLC
#                         All rights reserved.
#
# This file is part of the sdsdkv project. See the LICENSE file at the
# top-level directory of this distribution.
#

SUBDIRS =

lib_LTLIBRARIES = \
libsdsdkv.la

include_HEADERS = \
sdsdkv.h

libsdsdkv_la_SOURCES = \
sdsdkv-config.h \
sdsdkv-mpi.h \
sdsdkv.cc

libsdsdkv_la_CFLAGS =
libsdsdkv_la_LDFLAGS = -version-info @SDSDKV_LIBVINFO@
libsdsdkv_la_LIBADD =
