#
# Copyright (c) 2018      Los Alamos National Security, LLC
#                         All rights reserved.
#
# This file is part of the sdsdkv project. See the LICENSE file at the
# top-level directory of this distribution.
#

noinst_PROGRAMS = \
trivial

###
trivial_SOURCES  = trivial.cc
trivial_CXXFLAGS = -I$(top_srcdir)/src
trivial_LDADD    = $(top_builddir)/src/libsdsdkv.la
